# ClaimMap

./: .env.example  .gitignore  README.md  pyproject.toml
backend/: llm_fallback.py  main.py  requirements.txt
backend/brief/: __init__.py  citation_formatter.py  generator.py
backend/database/: __init__.py  paper_repo.py  papers.db
backend/extraction/: __init__.py  extractor.py  validator.py
backend/models/: __init__.py  claim.py  paper.py  relation.py  research_brief.py
backend/prompts/: __init__.py  claim_extraction.py  relation_detection.py
backend/routers/: __init__.py  brief_router.py  claims.py  discovery.py  synthesis_router.py
backend/synthesis/: __init__.py  claim_grouper.py  consensus_scorer.py  cross_source_pipeline.py  relation_detector.py
data/: discovered_papers.json  extracted_claims.json  ingested_papers.json  synthesis.json
docs/: architecture.md  demo_script.md  team_contributions.md  viva_qa.md
frontend/: index.html  package-lock.json  package.json  vercel.json
frontend/src/: App.css  App.tsx  index.css
output/: research_brief.md
scripts/: process_with_pdfs.py  run_discovery.py
src/brief_generator/: __init__.py  agent.py  exporter.py  template.py
src/claim_extractor/: __init__.py  agent.py  llm_client.py
src/document_processor/: __init__.py  agent.py  field_extractor.py  pdf_extractor.py
src/paper_discovery/: __init__.py  agent.py  arxiv_client.py  relevance.py  (+1 more)
tests/: __init__.py  test_agent_1_discovery.py  test_agent_2_ingestion.py  test_agent_3_claims.py  test_agent_4_synthesis.py  test_agent_5_brief.py
(+19 files in other folders)
