[project]
name = "ai-research-synthesis"
version = "0.1.0"
description = "AI Research Synthesis Engine - From 50 papers to one coherent research brief"
requires-python = ">=3.10"
dependencies = [
    "openai>=1.0.0",
    "arxiv>=1.4.0",
    "semanticscholar>=0.5.0",
    "pdfplumber>=0.10.0",
    "pymupdf>=1.23.0",
    "python-dotenv>=1.0.0",
    "tenacity>=8.2.0",
    "tiktoken>=0.5.0",
    "chromadb>=0.4.0",
    "numpy>=1.24.0",
    "pandas>=2.0.0",
    "pydantic>=2.0.0",
    "weasyprint>=60.0",
    "markdown>=3.4.0",
    "jinja2>=3.1.0",
    "httpx>=0.25.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4.0",
    "pytest-asyncio>=0.21.0",
    "black>=23.0.0",
    "ruff>=0.1.0",
    "mypy>=1.5.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]

[tool.black]
line-length = 100

[tool.ruff]
line-length = 100
